moved DrawCallInfo to Base.Rendering;

--- a/src/Aardvark.Base.Rendering/Aardvark.Base.Rendering.csproj
+++ b/src/Aardvark.Base.Rendering/Aardvark.Base.Rendering.csproj
@@ -44,7 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IndexedGeometry.cs" />
+    <Compile Include="Types\DrawCallInfo.cs" />
+    <Compile Include="Types\IndexedGeometry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
