added GPUVendor and Surface interfaces; made Ag init faster (Introspection);

--- a/src/Aardvark.Base.Rendering/Aardvark.Base.Rendering.csproj
+++ b/src/Aardvark.Base.Rendering/Aardvark.Base.Rendering.csproj
@@ -45,8 +45,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Types\DrawCallInfo.cs" />
+    <Compile Include="Types\GPUVendor.cs" />
     <Compile Include="Types\IndexedGeometry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Types\Surfaces.cs" />
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
