fixed Aardvark.Base.Rendering project;

--- a/src/Aardvark.Base.Rendering/Aardvark.Base.Rendering.fsproj
+++ b/src/Aardvark.Base.Rendering/Aardvark.Base.Rendering.fsproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IndexedGeometry.fs" />
+    <Compile Include="FrameStatistics.fs" />
     <Compile Include="DrawCallInfo.fs" />
     <Compile Include="RenderJob.fs" />
     <Compile Include="GPUVendor.fs" />
