--- a/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
+++ b/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
@@ -53,32 +53,6 @@
   <Import Project="..\..\..\..\build\Aardvark.targets" Condition="exists('..\..\..\..\build\Aardvark.targets')" />
   <Import Project="$(SolutionPath).targets" Condition="exists('$(SolutionPath).targets')" />
   <Import Project="$(FSharpTargetsPath)" />
-  <ItemGroup>
-    <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Numerics" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Core\PriorityQueue.fs" />
-    <Compile Include="Core\WeakSet.fs" />
-    <Compile Include="Core\ReferenceCountingSet.fs" />
-    <Compile Include="Core\TimeList.fs" />
-    <Compile Include="Core\Types.fs" />
-    <Compile Include="Core\Cache.fs" />
-    <Compile Include="Core\Core.fs" />
-    <Compile Include="Mod\Mod.fs" />
-    <Compile Include="AdaptiveSet\AdaptiveSetCore.fs" />
-    <Compile Include="AdaptiveSet\ChangeableSet.fs" />
-    <Compile Include="AdaptiveSet\AdaptiveSet.fs" />
-    <Compile Include="AdaptiveList\AdaptiveListCore.fs" />
-    <Compile Include="Builders.fs" />
-    <Compile Include="CSharp.fs" />
-  </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
@@ -182,4 +156,81 @@
       </ItemGroup>
     </Otherwise>
   </Choose>
+  <Choose>
+    <When Condition="exists('..\..\..\..\build\Aardvark.targets')">
+      <Choose>
+        <When Condition="'$(AardvarkBaseEssentialsProjectPath)' == ''">
+          <ItemGroup>
+            <Reference Include="Aardvark.Base.Essentials [Binary]">
+              <HintPath>$(OutputPath)\Aardvark.Base.Essentials.dll</HintPath>
+              <Private>False</Private>
+            </Reference>
+          </ItemGroup>
+        </When>
+        <Otherwise>
+          <ItemGroup>
+            <ProjectReference Include="$(AardvarkBaseEssentialsProjectPath)">
+              <Name>Aardvark.Base.Essentials [Project]</Name>
+              <Project>{7FEF0693-EFC3-4B85-8F42-933B25F353A8}</Project>
+              <Private>False</Private>
+            </ProjectReference>
+          </ItemGroup>
+        </Otherwise>
+      </Choose>
+    </When>
+    <Otherwise>
+      <ItemGroup>
+        <ProjectReference Include="..\Aardvark.Base.Essentials\Aardvark.Base.Essentials.csproj">
+          <Name>Aardvark.Base.Essentials</Name>
+          <Project>{7FEF0693-EFC3-4B85-8F42-933B25F353A8}</Project>
+          <Private>False</Private>
+        </ProjectReference>
+      </ItemGroup>
+    </Otherwise>
+  </Choose>
+  <ItemGroup>
+    <Compile Include="Core\PriorityQueue.fs" />
+    <Compile Include="Core\WeakSet.fs" />
+    <Compile Include="Core\ReferenceCountingSet.fs" />
+    <Compile Include="Core\TimeList.fs" />
+    <Compile Include="Core\Types.fs" />
+    <Compile Include="Core\Cache.fs" />
+    <Compile Include="Core\Core.fs" />
+    <Compile Include="Core\DerivedSet.fs" />
+    <Compile Include="Mod\Mod.fs" />
+    <Compile Include="AdaptiveSet\AdaptiveSetCore.fs" />
+    <Compile Include="AdaptiveSet\ChangeableSet.fs" />
+    <Compile Include="AdaptiveSet\AdaptiveSet.fs" />
+    <Compile Include="AdaptiveList\AdaptiveListCore.fs" />
+    <Compile Include="Builders.fs" />
+    <Compile Include="CSharp.fs" />
+    <Compile Include="Adapters\EventAdapter.fs" />
+    <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="mscorlib" />
+    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Reactive.Core">
+      <HintPath>..\..\packages\Rx-Core.2.2.5\lib\net45\System.Reactive.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Reactive.Interfaces">
+      <HintPath>..\..\packages\Rx-Interfaces.2.2.5\lib\net45\System.Reactive.Interfaces.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Reactive.Linq">
+      <HintPath>..\..\packages\Rx-Linq.2.2.5\lib\net45\System.Reactive.Linq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Reactive.PlatformServices">
+      <HintPath>..\..\packages\Rx-PlatformServices.2.2.5\lib\net45\System.Reactive.PlatformServices.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+  </ItemGroup>
 </Project>
