--- a/src/Aardvark.Base.Rendering/Aardvark.Base.Rendering.fsproj
+++ b/src/Aardvark.Base.Rendering/Aardvark.Base.Rendering.fsproj
@@ -205,4 +205,36 @@
       </ItemGroup>
     </Otherwise>
   </Choose>
+  <Choose>
+    <When Condition="exists('..\..\..\..\build\Aardvark.targets')">
+      <Choose>
+        <When Condition="'$(AardvarkBaseEssentialsProjectPath)' == ''">
+          <ItemGroup>
+            <Reference Include="Aardvark.Base.Essentials [Binary]">
+              <HintPath>$(OutputPath)\Aardvark.Base.Essentials.dll</HintPath>
+              <Private>False</Private>
+            </Reference>
+          </ItemGroup>
+        </When>
+        <Otherwise>
+          <ItemGroup>
+            <ProjectReference Include="$(AardvarkBaseEssentialsProjectPath)">
+              <Name>Aardvark.Base.Essentials [Project]</Name>
+              <Project>{7FEF0693-EFC3-4B85-8F42-933B25F353A8}</Project>
+              <Private>False</Private>
+            </ProjectReference>
+          </ItemGroup>
+        </Otherwise>
+      </Choose>
+    </When>
+    <Otherwise>
+      <ItemGroup>
+        <ProjectReference Include="..\Aardvark.Base.Essentials\Aardvark.Base.Essentials.csproj">
+          <Name>Aardvark.Base.Essentials</Name>
+          <Project>{7FEF0693-EFC3-4B85-8F42-933B25F353A8}</Project>
+          <Private>False</Private>
+        </ProjectReference>
+      </ItemGroup>
+    </Otherwise>
+  </Choose>
 </Project>
