--- a/src/Aardvark.Base.Essentials/Aardvark.Base.Essentials.csproj
+++ b/src/Aardvark.Base.Essentials/Aardvark.Base.Essentials.csproj
@@ -21,7 +21,7 @@
     <IntermediateOutputPath>..\..\Bin\Debug\obj\</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <WarningLevel>3</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DocumentationFile>..\..\Bin\Debug\Aardvark.Base.Essentials.xml</DocumentationFile>
   </PropertyGroup>
@@ -32,7 +32,7 @@
     <IntermediateOutputPath>..\..\Bin\Release\obj\</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <WarningLevel>3</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DocumentationFile>..\..\Bin\Release\Aardvark.Base.Essentials.xml</DocumentationFile>
   </PropertyGroup>
@@ -65,6 +65,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Camera\CameraProjectionOrtho.cs" />
+    <Compile Include="Camera\CameraProjectionPerspective.cs" />
+    <Compile Include="Camera\CameraViewRaw.cs" />
+    <Compile Include="Camera\CameraViewWithSky.cs" />
+    <Compile Include="Camera\ICameraProjection.cs" />
+    <Compile Include="Camera\ICameraProjectionExtensions.cs" />
+    <Compile Include="Camera\ICameraView.cs" />
+    <Compile Include="Camera\ICameraViewExtensions.cs" />
     <Compile Include="Editing\BehaviorDragAbsolute.cs" />
     <Compile Include="Editing\BehaviorDragRelative.cs" />
     <Compile Include="Editing\IBehaviorSplittableEdge2d.cs" />
@@ -79,6 +87,8 @@
     <Compile Include="Geometry\IImmutablePolygon2d.cs" />
     <Compile Include="Geometry\IImmutablePolygon2dExtensions.cs" />
     <Compile Include="Geometry\ImmutablePolygon2d.cs" />
+    <Compile Include="NormalizedDeviceCoordinates.cs" />
+    <Compile Include="PixelPosition.cs" />
     <Compile Include="System\Awaitable.cs" />
     <Compile Include="System\Clock.cs" />
     <Compile Include="System\Disposable.cs" />
