references are plain again;

--- a/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
+++ b/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
@@ -53,141 +53,31 @@
   <Import Project="..\..\..\..\build\Aardvark.targets" Condition="exists('..\..\..\..\build\Aardvark.targets')" />
   <Import Project="$(SolutionPath).targets" Condition="exists('$(SolutionPath).targets')" />
   <Import Project="$(FSharpTargetsPath)" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
-  <Choose>
-    <When Condition="exists('..\..\..\..\build\Aardvark.targets')">
-      <Choose>
-        <When Condition="'$(AardvarkBaseTypeProvidersProjectPath)' == ''">
-          <ItemGroup>
-            <Reference Include="Aardvark.Base.TypeProviders [Binary]">
-              <HintPath>$(OutputPath)\Aardvark.Base.TypeProviders.dll</HintPath>
-              <Private>False</Private>
-            </Reference>
-          </ItemGroup>
-        </When>
-        <Otherwise>
-          <ItemGroup>
-            <ProjectReference Include="$(AardvarkBaseTypeProvidersProjectPath)">
-              <Name>Aardvark.Base.TypeProviders [Project]</Name>
-              <Project>{8bfea4ef-bf0a-4c1a-b7ac-cbdd930306fd}</Project>
-              <Private>False</Private>
-            </ProjectReference>
-          </ItemGroup>
-        </Otherwise>
-      </Choose>
-    </When>
-    <Otherwise>
-      <ItemGroup>
-        <ProjectReference Include="..\Aardvark.Base.TypeProviders\Aardvark.Base.TypeProviders.fsproj">
-          <Name>Aardvark.Base.TypeProviders</Name>
-          <Project>{8bfea4ef-bf0a-4c1a-b7ac-cbdd930306fd}</Project>
-          <Private>False</Private>
-        </ProjectReference>
-      </ItemGroup>
-    </Otherwise>
-  </Choose>
-  <Choose>
-    <When Condition="exists('..\..\..\..\build\Aardvark.targets')">
-      <Choose>
-        <When Condition="'$(AardvarkBaseFSharpProjectPath)' == ''">
-          <ItemGroup>
-            <Reference Include="Aardvark.Base.FSharp [Binary]">
-              <HintPath>$(OutputPath)\Aardvark.Base.FSharp.dll</HintPath>
-              <Private>False</Private>
-            </Reference>
-          </ItemGroup>
-        </When>
-        <Otherwise>
-          <ItemGroup>
-            <ProjectReference Include="$(AardvarkBaseFSharpProjectPath)">
-              <Name>Aardvark.Base.FSharp [Project]</Name>
-              <Project>{692a3617-719b-4ea2-abc1-407ae20094ae}</Project>
-              <Private>False</Private>
-            </ProjectReference>
-          </ItemGroup>
-        </Otherwise>
-      </Choose>
-    </When>
-    <Otherwise>
-      <ItemGroup>
-        <ProjectReference Include="..\Aardvark.Base.FSharp\Aardvark.Base.FSharp.fsproj">
-          <Name>Aardvark.Base.FSharp</Name>
-          <Project>{692a3617-719b-4ea2-abc1-407ae20094ae}</Project>
-          <Private>False</Private>
-        </ProjectReference>
-      </ItemGroup>
-    </Otherwise>
-  </Choose>
-  <Choose>
-    <When Condition="exists('..\..\..\..\build\Aardvark.targets')">
-      <Choose>
-        <When Condition="'$(AardvarkBaseProjectPath)' == ''">
-          <ItemGroup>
-            <Reference Include="Aardvark.Base [Binary]">
-              <HintPath>$(OutputPath)\Aardvark.Base.dll</HintPath>
-              <Private>False</Private>
-            </Reference>
-          </ItemGroup>
-        </When>
-        <Otherwise>
-          <ItemGroup>
-            <ProjectReference Include="$(AardvarkBaseProjectPath)">
-              <Name>Aardvark.Base [Project]</Name>
-              <Project>{377DA721-C821-45F6-B803-9C8724C7B37F}</Project>
-              <Private>False</Private>
-            </ProjectReference>
-          </ItemGroup>
-        </Otherwise>
-      </Choose>
-    </When>
-    <Otherwise>
-      <ItemGroup>
-        <ProjectReference Include="..\Aardvark.Base\Aardvark.Base.csproj">
-          <Name>Aardvark.Base</Name>
-          <Project>{377DA721-C821-45F6-B803-9C8724C7B37F}</Project>
-          <Private>False</Private>
-        </ProjectReference>
-      </ItemGroup>
-    </Otherwise>
-  </Choose>
-  <Choose>
-    <When Condition="exists('..\..\..\..\build\Aardvark.targets')">
-      <Choose>
-        <When Condition="'$(AardvarkBaseEssentialsProjectPath)' == ''">
-          <ItemGroup>
-            <Reference Include="Aardvark.Base.Essentials [Binary]">
-              <HintPath>$(OutputPath)\Aardvark.Base.Essentials.dll</HintPath>
-              <Private>False</Private>
-            </Reference>
-          </ItemGroup>
-        </When>
-        <Otherwise>
-          <ItemGroup>
-            <ProjectReference Include="$(AardvarkBaseEssentialsProjectPath)">
-              <Name>Aardvark.Base.Essentials [Project]</Name>
-              <Project>{7FEF0693-EFC3-4B85-8F42-933B25F353A8}</Project>
-              <Private>False</Private>
-            </ProjectReference>
-          </ItemGroup>
-        </Otherwise>
-      </Choose>
-    </When>
-    <Otherwise>
-      <ItemGroup>
-        <ProjectReference Include="..\Aardvark.Base.Essentials\Aardvark.Base.Essentials.csproj">
-          <Name>Aardvark.Base.Essentials</Name>
-          <Project>{7FEF0693-EFC3-4B85-8F42-933B25F353A8}</Project>
-          <Private>False</Private>
-        </ProjectReference>
-      </ItemGroup>
-    </Otherwise>
-  </Choose>
+
+
+  <ItemGroup>
+	<ProjectReference Include="../Aardvark.Base.TypeProviders/Aardvark.Base.TypeProviders.fsproj">
+	  <Name>Aardvark.Base.TypeProviders</Name>
+	  <Project>{8bfea4ef-bf0a-4c1a-b7ac-cbdd930306fd}</Project>
+	  <Private>False</Private>
+	</ProjectReference>
+	<ProjectReference Include="../Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj">
+	  <Name>Aardvark.Base.FSharp</Name>
+	  <Project>{692a3617-719b-4ea2-abc1-407ae20094ae}</Project>
+	  <Private>False</Private>
+	</ProjectReference>
+	<ProjectReference Include="../Aardvark.Base/Aardvark.Base.csproj">
+	  <Name>Aardvark.Base</Name>
+	  <Project>{377DA721-C821-45F6-B803-9C8724C7B37F}</Project>
+	  <Private>False</Private>
+	</ProjectReference>
+	<ProjectReference Include="../Aardvark.Base.Essentials/Aardvark.Base.Essentials.csproj">
+	  <Name>Aardvark.Base.Essentials</Name>
+	  <Project>{7FEF0693-EFC3-4B85-8F42-933B25F353A8}</Project>
+	  <Private>False</Private>
+	</ProjectReference>
+  </ItemGroup>
+
   <ItemGroup>
     <Compile Include="Core\PriorityQueue.fs" />
     <Compile Include="Core\WeakSet.fs" />
