added PixImageBitmap (untested);

--- a/src/Aardvark.Base/Aardvark.Base.csproj
+++ b/src/Aardvark.Base/Aardvark.Base.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Images\IPix.cs" />
     <Compile Include="Images\IPixOld.cs" />
     <Compile Include="Images\PixImage.cs" />
+    <Compile Include="Images\PixImageBitmap.cs" />
     <Compile Include="Images\PixImageCube.cs" />
     <Compile Include="Images\PixImageDevil.cs" />
     <Compile Include="Images\PixImageExtensions.cs" />
