--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -53,8 +53,7 @@
   <Import Project="..\..\..\..\build\Aardvark.targets" Condition="exists('..\..\..\..\build\Aardvark.targets')" />
   <Import Project="$(SolutionPath).targets" Condition="exists('$(SolutionPath).targets')" />
   <Import Project="$(FSharpTargetsPath)" />
- <ItemGroup>
-
+  <ItemGroup>
     <Compile Include="AVL.fs" />
     <Compile Include="Order.fs" />
     <Compile Include="Prelude\Logging.fs" />
@@ -82,38 +81,38 @@
     <Compile Include="Interop\Color.fs" />
     <Compile Include="Interop\String.fs" />
     <None Include="packages.config" />
+    <Content Include="app.config" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Compiler.Service">
-      <HintPath>..\..\packages\FSharp.Compiler.Service.0.0.58\lib\net40\FSharp.Compiler.Service.dll</HintPath>
+      <HintPath>..\..\packages\FSharp.Compiler.Service.0.0.85\lib\net45\FSharp.Compiler.Service.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="nunit.framework">
-      <HintPath>..\..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+      <HintPath>..\..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="RegexProvider">
-      <HintPath>..\..\packages\RegexProvider.0.0.2\lib\net40\RegexProvider.dll</HintPath>
+      <HintPath>..\..\packages\RegexProvider.0.0.4\lib\net40\RegexProvider.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics" />
-  </ItemGroup>
-  <ItemGroup>
-	<ProjectReference Include="..\Aardvark.Base.TypeProviders\Aardvark.Base.TypeProviders.fsproj">
-	  <Name>Aardvark.Base.TypeProviders</Name>
-	  <Project>{8BFEA4EF-BF0A-4C1A-B7AC-CBDD930306FD}</Project>
-	  <Private>False</Private>
-	</ProjectReference>
-	<ProjectReference Include="..\Aardvark.Base\Aardvark.Base.csproj">
-	  <Name>Aardvark.Base</Name>
-	  <Project>{377DA721-C821-45F6-B803-9C8724C7B37F}</Project>
-	  <Private>False</Private>
-	</ProjectReference>
+    <ProjectReference Include="..\Aardvark.Base.TypeProviders\Aardvark.Base.TypeProviders.fsproj">
+      <Name>Aardvark.Base.TypeProviders</Name>
+      <Project>{8BFEA4EF-BF0A-4C1A-B7AC-CBDD930306FD}</Project>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\Aardvark.Base\Aardvark.Base.csproj">
+      <Name>Aardvark.Base</Name>
+      <Project>{377DA721-C821-45F6-B803-9C8724C7B37F}</Project>
+      <Private>False</Private>
+    </ProjectReference>
   </ItemGroup>
 </Project>
